[package]
name = "jniutil"
version = "0.2.1"
authors = ["koocyton <koocyton@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
rust-crypto = "0.2"
clap = "2.33"
hex = "0.4"
base64 = "0.13.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
futures = { version = "0.3.*" }
async-std = { version = "1", features = ["attributes", "tokio1"] }

[lib]
crate_type = ["cdylib"]